--- a/app/src/main/res/menu/menu_book_detail.xml
+++ b/app/src/main/res/menu/menu_book_detail.xml
@@ -4,4 +4,11 @@
     tools:context="com.codepath.android.booksearch.activities.BookDetailActivity">
     <item android:id="@+id/action_settings" android:title="@string/action_settings"
         android:orderInCategory="100" app:showAsAction="never" />
+
+    <item
+        android:id="@+id/menu_item_share"
+        app:showAsAction="ifRoom"
+        android:title="Share"
+        app:actionProviderClass="android.support.v7.widget.ShareActionProvider" />
+
 </menu>
